# cuSZ

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CUSZConfig.cmake.in  LICENSE  Makefile  README.md  baryon_density.dat.b16.canonized  baryon_density.dat.b16.tgz  build.py  changelog  gather-scatter-debug.cu  parse_nvprof_log.sh
build-ib/: CMakeCache.txt  CTestTestfile.cmake  CUSZConfig.cmake  CUSZConfigVersion.cmake  DartConfiguration.tcl  cmake_install.cmake
cmake/: CUSZConfig.cmake.in  cuda.cmake  cusz.cmake  dpsz.cmake  hip.cmake  hipsz.cmake  logging.cmake  probe.cmake  sycl.cmake
codec/fzg/: CMakeLists.txt  FZGConfig.cmake.in  fzg_class.cc  fzg_class.hh  fzg_type.h
codec/fzg/include/: fzg.h  fzg_class.hh  fzg_hl.hh  fzg_impl.hh  fzg_kernel.hh
codec/fzg/src/: fzg_buf.cc  fzg_class.cc  fzg_hl.cc  fzg_kernel.cu
codec/fzg/src/detail/: fzg_c.cuhip.inl  fzg_x.cuhip.inl
codec/hf/: CMakeLists.txt  HFConfig.cmake.in
codec/hf/_deprecated/: hf_bk_p1.cu  hf_bk_p1.cu.inl
codec/hf/include/: cxx_hfbk.h  cxx_hfbk_cu.h  hf.h  hf_bk.h  hf_bk_impl.hh  hf_buf.hh  hf_hl.hh  hf_impl.hh  hf_kernels.hh  hf_ood.hh  hf_type.h  hf_word.hh  hfbk.hh  hfbk_impl.hh  hfbuf.h  hfclass.hh  hfcxx_array.hh  hfcxx_module.hh  hfword.hh  phf_array.hh  rs_merge.hh  rs_merge.hxx
codec/hf/src/: hf_bk.seq.cc  hf_bk_impl1.seq.cc  hf_bk_impl2.seq.cc  hf_bk_internal.seq.cc  hf_bk_p2.cu  hf_buf.cc  hf_canon.seq.cc  hf_est.cc  hf_hl.cc  hf_kernels.cu  hf_kernels.cuhip.inl  hf_kernels.dp.inl  hf_ood.cc  hf_ood.cuhip.inl  hf_ood.dp.cpp  hf_ood.dp.inl  hf_ood.hip  hfbk.seq.cc  hfbk_impl1.seq.cc  hfbk_impl2.seq.cc  hfbk_internal.seq.cc  hfbuf.cc  hfcanon.seq.cc  hfclass.cc  hfclass.dp.cpp  hfclass.hip  hfcxx_module.cu  hfcxx_module.cuhip.inl  libphf.cc  rs_merge.seq.cc  rs_merge_demo.cu  rs_merge_r1.cu  rs_merge_r2.cu  rs_merge_r3.cu  rs_merge_r4.cu
codec/hf/src/detail/: auxiliary.inl  hf_kernels.cuhip.inl  hf_ood.cuhip.inl  hf_ood.dp.inl  hfbk_p2.cu.inl  hfbuf.inl  hfclass.cuhip.inl  hfclass.dp.inl  hfcodec.cuhip.inl  hfcodec.dp.inl  rs_merge.cu_hip.inl  rs_merge.cuhip.inl  rs_merge.seq.inl
data/: Makefile  sample-cesm-CLDHGH.REMOVED.git-id  sh.get-sample-data  (+1 more)
example/: CMakeLists.txt  README.md
example/cmake/: cu-ex.cmake  cuda-example.cmake  cusz-example.cmake  dp-ex.cmake  hip-ex.cmake  hip-example.cmake  hipsz-example.cmake  sycl-example.cmake
example/src/: .clang-format  CMakeCache.txt  app_spline3_pred.cu  batch_run.cc  bin_fzgcodec.cc  bin_hf.cc  bin_hfserial.cc  bin_hist.cc  bin_lorenzo.cc  bin_phf.cc  bin_pipeline.cc  bin_pipeline.cu_hip.cc  bin_pipeline.dp.cpp  bin_pipeline_proto.cu  bin_pred-hist.cc  bin_prequant.cc  bin_spline3.cu  bin_spv.cc  bin_viadisk.cc  capi  capi.cc  capi.cu  check-macro.cc  ck1.cc  ck1.cu  ck1var.cc  ck1var.cu  ck2.cu  cmake_install.cmake  comp.cu  cxxapi.cc  cxxapi.cu  demo_capi.cu_hip.cc  demo_capi.cuda.cc  demo_capi.hip.cc  demo_capi_cuda.cc  demo_capi_cuda.cu  demo_capi_cxx.cc  demo_capi_cxx_hip.cpp  demo_capi_hip.cc  (+37 more)
portable/: CMakeLists.txt  PORTABLEConfig.cmake.in
portable/include/: c_type.h  cxx_typing.h
portable/include/macro/: c_cu2hip_0_translation.h  c_cu2hip_2_suppress_warning.h
portable/include/mem/: cxx_array.h  cxx_backends.h  cxx_mem_ops.h  cxx_memobj.h  cxx_smart_ptr.h  cxx_sp_cpu.h  cxx_sp_gpu.h  sp_interface.h
portable/include/utils/: busyheader.h  busyheader.hh  format.hh  io.hh
portable/src/mem/: memobj.i.cc  memobj_impl.inl
test/: CMakeLists.txt  Makefile  demo_fp_int.cc  dummy_cxlorenzo.cu  dummy_cxlorenzo3d.cu  dummy_spline.cu  dummy_xlorenzo2d.cu  dummy_xlorenzo3d.cu  ex_common.cuh  ex_spline.cu  ex_spline3.cu  ex_spline3_common.cuh  ex_spline3_demo.cu  ex_spline3_demo1.cu  ex_spline3_demo2.cu  ex_spline3_stack.cu  sh.sparsity  test_cub2d.cu  test_dropout.cu  test_dryrun.cu  test_hist.cu  test_huff_class.cu  test_log.cc  test_lorenzodq.cu  test_query.cc  test_rle.cu  test_sparse_op.cu  test_sparsity.cu  test_spgs.cu  test_thrustgs.cu  test_timer.cu  test_type_binding.cu  test_xdq2d.cu  test_xdq3d.cu
test/cmake/: cu-test.cmake  cuda-test.cmake  cusz-test.cmake  dp-test.cmake  dpsz-test.cmake  hip-test.cmake
test/src/: Makefile  dummy_cxlorenzo.cu  pred_ll.cc  rand.cc  rand.hh  rand_g.cc  spv.cc  spv.cu  spvo.cc  spvo.cu  tcpu.c  test_core_cudakernelwrapper_pred.cc  test_core_cudaproto.cu  test_core_serial.cc  test_decomp_lrz.cu  test_decomp_lrz.dp.cpp  test_dryrun.cu  test_hfr.cc  test_histsp.cu  test_histsp.dp.cpp  test_identical.cc  test_l1_compact.cu  test_l1_compact_hip.cpp  test_l1_l23scan.cu  test_l1_l23scan_hip.cpp  test_l23_scan.cu  test_l23_utils.hh  test_l23_v0_1d.cu  test_l23_v0_2d.cu  test_l23_v0_3d.cu  test_l23_v0c_1d.cu  test_l23_v0c_2d.cu  test_l23_v0r1_3d.cu  test_l23_v0r1c_3d.cu  test_l2_cudaproto.cu  test_l2_cudaproto_hip.cpp  test_l2_histsp.cu  test_l2_histsp_hip.cpp  test_l2_serial.cc  test_l3_cuda_pred.cc  (+32 more)
test/src/detail/: correctness.inl  t_compact.inl  t_cuda_pred.inl  t_cudaproto.inl  t_histsp.cu_hip.inl  t_histsp.cuhip.inl  t_histsp.dp.inl  t_histsp.inl  t_lorenzosp.inl  t_lrzsp.cu_hip.inl  t_lrzsp.cuhip.inl  t_lrzsp.dp.inl  t_lrzsp2.cu_hip.inl  t_scan.inl  t_scan_multblk.inl  t_spv.cu_hip.inl  t_spv.dp.inl  t_spv.inl  tune_histsp.cuhip.inl  tune_histsp.dp.inl
test/src/utils/: rand.cu_hip.cc  rand.dp.cpp  rand.seq.cc
test/src2/: test_l2_histsp.cu
utils/: CMakeLists.txt  EVALConfig.cmake.in
utils/include/: stat.h
utils/include/detail/: compare.hh
utils/include/utils/: viewer.hh  vis_stat.hh
utils/src/assess/: f4.dpl.cpp  f8.dpl.cpp  f8.thrust.hip
utils/src/calcerr/: f8.cu
utils/src/detail/: atomics.cuhip.inl  calc_err.cuhip.inl  compare.dpl.inl  compare.stl.inl  compare.thrust.inl  ebness.dpl.inl  ebness.thrust.inl  extrema.cuhip.inl  extrema.dp.inl  extrema.dpl.inl  extrema.thrust.inl  maxerr.thrust.inl
utils/src/eb/: all.thrust.cu
utils/src/extrema/: f4.dp.cpp  f4.thrust.hip
utils/src/identical/: all.dpl.cpp  all.thrust.hip
utils/src/maxerr/: f4.thrust.cu
utils/src/viewer/: viewer.cc  viewer.cu  viewer.cuhip.inl  viewer.dp.inl  vis_stat.cc  vis_stat.inl
(+1295 files in other folders)
